fix: make backdrops a bit more visible

--- a/assets/style.css
+++ b/assets/style.css
@@ -155,7 +155,7 @@ p a:hover {
     height: 100%;
     -webkit-mask-image: linear-gradient(to right, transparent, rgba(0, 0, 0, 1.0) 25%);
     mask-image: linear-gradient(to right, transparent, rgba(0, 0, 0, 1.0) 25%);
-    opacity: 0.20;
+    opacity: 0.25;
     position: absolute;
     right: -34px;
     top: 0;
